add changes to main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: A workflow for my Hello World file
-on: push
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -7,6 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - name: Hello world action
+        run: echo "Hello world!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_REF: ${{ github.ref }}
+          GITHUB_EVENT_NAME: ${{ github.eventName }}
+          GITHUB_WORKFLOW: ${{ github.workflow }}
+          GITHUB_ACTION: ${{ github.action }}
       - uses: ./action-a
         with:
           MY_NAME: "Lucas"
+      - uses: ./action-b
