--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: A workflow for my Hello World file
 on:
   push:
     branches:
-      - master
+      - lucas_branch
 
 jobs:
   build:
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Hello world action
         run: echo "Hello world!"
+        color: 0xCCCA6F
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
@@ -20,7 +21,11 @@ jobs:
           GITHUB_EVENT_NAME: ${{ github.eventName }}
           GITHUB_WORKFLOW: ${{ github.workflow }}
           GITHUB_ACTION: ${{ github.action }}
-      - uses: ./action-a
+      - name: Start
+        uses: ./action-a
         with:
           MY_NAME: "Lucas"
-      - uses: ./action-b
+      - name: Test
+        uses: ./action-b
+        with:
+          TEST_INPUT: "TEST lucas_branch"
