--- a/.github/workflows/lucas.yml
+++ b/.github/workflows/lucas.yml
@@ -1,8 +1,8 @@
-name: A workflow for my Hello World file
+name: A workflow for my Hello World file - Lucas yml
 on:
   push:
     branches:
-      - main
+      - lucas_branch
 
 jobs:
   build:
