--- a/.github/workflows/gian.yml
+++ b/.github/workflows/gian.yml
@@ -9,18 +9,8 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Hello world action
-        run: echo "Hello world!"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_EVENT_NAME: ${{ github.eventName }}
-          GITHUB_WORKFLOW: ${{ github.workflow }}
-          GITHUB_ACTION: ${{ github.action }}
-      # - uses: ./action-a
-      #   with:
-      #     MY_NAME: 'Lucas'
-      # - uses: ./action-b
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: node ./scripts/build.js
