--- a/.github/workflows/vivek.yml
+++ b/.github/workflows/vivek.yml
@@ -9,6 +9,7 @@ jobs:
     name: Node Run
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Build React App
         uses: ./vivekreactbuild
       #   env:
