--- a/vivekreactbuild/action.yml
+++ b/vivekreactbuild/action.yml
@@ -17,10 +17,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js 
+    - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: 12.x
+        node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
       run: npm install
