--- a/.github/workflows/vivek.yml
+++ b/.github/workflows/vivek.yml
@@ -6,21 +6,24 @@ on:
 
 jobs:
   build:
-    name: Node Run
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Build React App
-        uses: ./vivekreactbuild
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     GITHUB_REPOSITORY: ${{ github.repository }}
-      #     GITHUB_SHA: ${{ github.sha }}
-      #     GITHUB_REF: ${{ github.ref }}
-      #     GITHUB_EVENT_NAME: ${{ github.eventName }}
-      #     GITHUB_WORKFLOW: ${{ github.workflow }}
-      #     GITHUB_ACTION: ${{ github.action }}
-      # # - uses: ./action-a
-      # #   with:
-      # #     MY_NAME: 'Lucas'
-      # # - uses: ./action-b
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
